--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     
-    <div id='root'></div>
+    <div id='example'></div>
     <script src='src/bundle.js'></script>
 </body>
 </html>
