react 新闻页面 项目构建

--- a/index.html
+++ b/index.html
@@ -1,15 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale = 1,minimum-scale=1,user-scalabel=no">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
-    <link rel="stylesheet" href="./src/css/style.css">
+    <link rel="stylesheet" href="./src/css/pc.css">
+    <link rel="stylesheet" href="./src/css/mobile.css">
 </head>
+
 <body>
-    
-    <div id='example'></div>
+    <div id='mainContainer'></div>
     <script src='src/bundle.js'></script>
 </body>
+
 </html>
